Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/Recruiterbot__c.object-meta.xml
<CustomObject>
    <label>RecruiterBot</label>
    <nameField>
        <label>RecruiterBot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RecruiterBots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>