Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/fields/Invite_To_Register__c.field-meta.xml
<CustomField>
    <fullName>Invite_To_Register__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked succesful applicants will not be asked to register</inlineHelpText>
    <label>Invite To Register</label>
    <type>Checkbox</type>
</CustomField>