Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&apos;https://api.qrserver.com/v1/create-qr-code/?size=200x200&amp;data=https://yourcompanyportal-15728bf70b1.force.com/Application/s/recruiterbot?recordId=&apos;&amp;Id ,&apos;Scan QR code to open record in mobile.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>