Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/fields/RecruiterBot_URL__c.field-meta.xml
<CustomField>
    <fullName>RecruiterBot_URL__c</fullName>
    <label>RecruiterBot URL</label>
    <type>Url</type>
</CustomField>