Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary Work</fullName>
                <default>true</default>
                <label>Temporary Work</label>
            </value>
            <value>
                <fullName>Permanent Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>