Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/fields/Update_Owner__c.field-meta.xml
<CustomField>
    <fullName>Update_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If checked then the candidate Owner will be updated to the Owner of this RecuiterBot</inlineHelpText>
    <label>Update Owner</label>
    <type>Checkbox</type>
</CustomField>