Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/validationRules/No_Duplicate.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Duplicate</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(Name)) &amp;&amp; LOWER(VLOOKUP($ObjectType.Recruiterbot__c.Fields.Name, $ObjectType.Recruiterbot__c.Fields.Name , LOWER(Name))) = LOWER(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>This RecruiterBot Name is already in use</errorMessage>
</ValidationRule>