Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/listViews/Burton_Branch_RecruiterBots.listView-meta.xml
<ListView>
    <fullName>Burton_Branch_RecruiterBots</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Jason Hale</value>
    </filters>
    <label>Burton Branch RecruiterBots</label>
</ListView>