Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/listViews/Derby_Nottingham_Stoke_recruiterbots.listView-meta.xml
<ListView>
    <fullName>Derby_Nottingham_Stoke_recruiterbots</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>nikita adkin,sangeeta matharu,nikita lovett - adkin,anna lojkowska,sean clare,natasha eastwell</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Inactive</value>
    </filters>
    <label>Derby /Nottingham &amp; Stoke recruiterbots</label>
</ListView>