Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/listViews/karens_recruiterbots.listView-meta.xml
<ListView>
    <fullName>karens_recruiterbots</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Question_Count__c</columns>
    <columns>Invite_To_Register__c</columns>
    <filterScope>Everything</filterScope>
    <label>All recruiterbots</label>
    <sharedTo>
        <role>Blue_Arrow_change_team</role>
    </sharedTo>
</ListView>