Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/listViews/Liverpool_GA.listView-meta.xml
<ListView>
    <fullName>Liverpool_GA</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Liverpool GA</label>
</ListView>