Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/listViews/Liverpool_GA_Karl.listView-meta.xml
<ListView>
    <fullName>Liverpool_GA_Karl</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Liverpool GA Karl</label>
</ListView>