Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/listViews/Newbury_REcruiterBolts.listView-meta.xml
<ListView>
    <fullName>Newbury_REcruiterBolts</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>suzanne corbett,darren popkiss,abbie evanson</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Inactive</value>
    </filters>
    <label>Newbury REcruiterBolts</label>
    <sharedTo>
        <role>Blue_Arrow_Newbury_Temps</role>
    </sharedTo>
</ListView>