Frankbelford/uatv1ba/force-app/main/default/objects/Recruiterbot__c/listViews/Recruiterbot1.listView-meta.xml
<ListView>
    <fullName>Recruiterbot1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Recruiterbot</label>
</ListView>